prover-ray/zkcdriver/testdata/synced/invalid/break_03.zkc
//error:6:7-12:break outside loop
fn f(x:u8, y:u8) -> (r:u8) {
  r = 0
  if x == 0 {
    if y == 1 {
      break
    }
  }
  return
}
